// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestErrorComponent RestErrorComponent with custom props Matching snapshot 1`] = `
<div
  className="nmc__wrapper"
>
  <div
    className="nmc__content"
  >
    <h2
      className="nmc__error_code"
    >
      500
    </h2>
    <div>
      <div
        className="nmc__text"
      >
        <div>
          server error
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RestErrorComponent RestErrorComponent with default props Matching snapshot 1`] = `
<div
  className="nmc__wrapper"
>
  <div
    className="nmc__content"
  >
    <h2
      className="nmc__error_code"
    >
      404
    </h2>
    <div>
      <div
        className="nmc__text"
      >
        <div>
          Page was not found
        </div>
        <div>
          <div>
            You feel lost?
          </div>
          <Link
            className="button__back"
            replace={false}
            to="/"
          >
            Back Home
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;
